# kinect2SekeletonStream

./: .gitignore  LICENSE  README.md
client/: CMakeLists.txt  SkeletonStreamClient.cpp  SkeletonStreamClient.h
sampleClient/: CMakeLists.txt  main.cpp
server/: BodyBasics-D2D.vcxproj  KinectJointFilter.cpp  KinectJointFilter.h  Sender.cpp  Sender.h  Server.cpp  Server.h  SkeletonStreamServer.sln  SkeletonStreamServer.vcxproj  packages.config
shared/: Types.h  config.h
